--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
    margin: 50px auto;
+   padding: 20px;
     font-family: arial, sans-serif;
     background-image:url('https://wallpapergram.ir/wp-img/WallpaperGram.IR_1553786402_19323.jpg');
     background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
-  }
+}
   
   h1 {
     color: #7c7c7c;
@@ -57,3 +58,6 @@ body {
   .degrees{
     font-size: large;
   }
+.card {
+  background: none;
+}
