--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
    padding: 20px;
     font-family: arial, sans-serif;
     background-image:url('https://wallpapergram.ir/wp-img/WallpaperGram.IR_1553786402_19323.jpg');
+    border: #1c1e20;
     background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
