--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body {
-   margin: 50px auto;
-   padding: 20px;
+   margin: 100px auto;
+   padding: 100px;
+   border: 10px solid black;
     font-family: arial, sans-serif;
     background-image:url('https://wallpapergram.ir/wp-img/WallpaperGram.IR_1553786402_19323.jpg');
     background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    border: 1px solid black;
 }
   
   h1 {
@@ -60,4 +62,8 @@ body {
   }
 .card {
   background: none;
+}
+.footer{
+text-align: center;
+
 }
