--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     border: 1px solid black;
+    max-width: 600px;
 }
   
   h1 {
