--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,10 @@ text-align: center;
 .btn btn-primary w-75{
 margin-left: 10px;
 }
+ .active{
+  color: black;
+  cursor: default;
+}
+ .active:hover{
+  text-decoration: none;
+}
