--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
    padding: 10px;
    border: 10px solid black;
     font-family: arial, sans-serif;
-    background-image:url('https://wallpapergram.ir/wp-img/WallpaperGram.IR_1553786402_19323.jpg');
+    background-image:url('https://bgtop.ir/wp-content/uploads/edd/2019/01/Flying-Above-Clouds-472x267.jpg');
     background-size: 100% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -71,11 +71,15 @@ text-align: center;
 .btn btn-primary w-75{
 margin-left: 10px;
 }
- .active{
-  color: black;
-  cursor: default;
-}
-  .active:hover{
-
-  text-decoration:none;
-}
+a {
+  text-decoration: none;
+  }
+  
+   .active{
+    text-decoration: underline;
+    color: black;
+    cursor: default;
+  }
+    .active:hover{
+    text-decoration:none;
+  }
